styled the nav bar removed link defaults and fixed spacing

--- a/microblog/static/microblog/style.css
+++ b/microblog/static/microblog/style.css
@@ -1,4 +1,4 @@
-$fontColor: blue;
+
 
 nav.navbar {
     padding-left: 20px;
@@ -9,6 +9,10 @@ ul.navbar-nav > li {
     margin-right: 1em;
 }
 
+ul.navbar-nav > li:last-child {
+    margin-right: 0;
+}
+
 p {
     color: red;
 }
@@ -17,12 +21,12 @@ h1 {
     color: teal !important;
 }
 
-a {
+li.nav-item > a, div.navbar-left-side > a {
     color: inherit;
     text-decoration: none;
 }
 
-a:hover {
+li.nav-item > a:hover, div.navbar-left-side > a:hover {
      color:inherit;
      text-decoration:none;
      cursor:pointer;
